--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "no-console": "off",
     "@typescript-eslint/explicit-function-return-type": "off"
   },
   "overrides": [
